Fix xcb crash when creating gl context

This is a regression introduced by
https://codereview.chromium.org/2139673002. GPU process crashed due an
assertion: '!xcb_xlib_threads_sequence_lost' failed.

BUG=628823

Review-Url: https://codereview.chromium.org/2206973002
Cr-Commit-Position: refs/heads/master@{#409814}

Former-commit-id: a1d7428578d800f6e0b474dd07c5c760021ff1e1